@@ -9,3 +9,18 @@
 4. Press overwrite LOCAL which will add remote settings to ur local.
 
 Optional when you have done changes to your local machine and want to sync to remote, do the opposite and press overwrite REMOTE
+
+(Help > edit custom vm options)
+# custom IntelliJ IDEA VM options
+
+-Xms1024m
+-Xmx2048m
+-XX:ReservedCodeCacheSize=240m
+-XX:+UseConcMarkSweepGC
+-XX:SoftRefLRUPolicyMSPerMB=50
+-ea
+-Dsun.io.useCanonCaches=false
+-Djava.net.preferIPv4Stack=true
+-Djdk.http.auth.tunneling.disabledSchemes=""
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:-OmitStackTraceInFastThrow
